--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   box-sizing:  border-box;
 }
 body {
-  width: 100vw; height: 100vh;
+  /* width: 100vw; height: 100vh; */
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
