--- a/feed.css
+++ b/feed.css
@@ -1,14 +1,18 @@
 .feed-login-content {
+    position: relative;
     display: flex;
     justify-content: center;
-    background: #f2f2f2;
     padding: 20px;
+    padding-bottom: 30px;
+    margin-top: -20px;
+    border-bottom: 1px solid #e7e7e7;
 }
 .feed-login {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     width: 80%;
+    max-width: 800px;
 }
 
 .feed-inputs {
@@ -87,8 +91,63 @@
     outline: none;
     cursor: pointer;
     content: '';
+    border: 1px solid #e7e7e7;
+    border-radius: 3px;
 }
 
 .saveLogInCheck::after {
     content: '\2713' !important;
 }
+
+/* WELCOME SPLASH SCREEN */
+.feed-welcome-content {
+    position:  absolute;
+    left: 0;
+    /*     border: 1px dashed blue; */
+    height: calc(100vh - 220px);
+    width: 100vw;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    display: flex;
+    justify-content:  center;
+    align-items:  center;
+  }
+  
+  .overlay {
+    position:  absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: radial-gradient(transparent, #FFFFFF 60%);
+  }
+  
+  .welcome-text {
+    position:  absolute;
+    z-index: 2;
+    top: 30px;
+    left: 100px;
+    right: 100px;
+    bottom: 0;
+    display:  flex;
+    flex-direction:  column;
+    align-items:  center;
+  }
+  
+  .welcome-to {
+    font-size: 1.25em;
+  }
+  
+  .name {
+    font-size:  3em;
+    font-weight: 600;
+    padding: 0 10px 0 20px;
+  }
+  
+  .name div {
+    /* position: absolute; */
+  }
+  
+  .name div:last-of-type {
+    margin-top: -21px;
+  }
