--- a/style.css
+++ b/style.css
@@ -57,6 +57,14 @@ body {
 /* BUTTON STYLING */
 button {
   outline: none;
+  background: #f2f2f2;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor:  pointer;
+}
+button:hover {
+  background: #e7e7e7;
 }
 
 /* INPUT CONTAINER STYLING */
