--- a/feed.css
+++ b/feed.css
@@ -151,3 +151,38 @@
   .name div:last-of-type {
     margin-top: -21px;
   }
+
+  .info {
+    display: flex;
+    align-items: center;
+    background:  #f2f2f2;
+}
+
+.feed-post-img {
+    width: 40px;
+    height: 40px;
+    margin: 10px 20px;
+    overflow:  hidden;
+    border-radius: 100%;
+    display: flex;
+    justify-content:  center;
+    align-items: center;
+}
+
+.feed-post-img img {
+    width: 100%;
+    border-radius: 100%;
+}
+
+.feed-post-text {
+    font-size: 0.8em;
+}
+
+.feed-post {
+    border: 1px solid #e7e7e7;
+    margin: 20px 0;
+}
+
+.feed-post .text {
+    padding: 20px;
+}
