--- a/feed.css
+++ b/feed.css
@@ -155,7 +155,7 @@
   .info {
     display: flex;
     align-items: center;
-    background:  #f2f2f2;
+    /* background:  #f2f2f2; */
 }
 
 .feed-post-img {
@@ -180,10 +180,18 @@
 }
 
 .feed-post {
-    border: 1px solid #e7e7e7;
+    /* border-bottom: 1px solid #e7e7e7; */
     margin: 20px 0;
+    position: relative;
 }
 
 .feed-post .text {
     padding: 20px;
+}
+
+.feed-border {
+    position:  absolute;
+    background: linear-gradient(to right, transparent,#e7e7e7,transparent);
+    width: 100%;
+    height: 2px;
 }
