--- a/userAuthedIn.css
+++ b/userAuthedIn.css
@@ -105,3 +105,17 @@
 .welcome-new-post-text textarea:focus ~ .active-textarea-underline {
     width: 100%;
 }
+
+.home-welcome-authenticated::-webkit-scrollbar {
+    width: 10px;
+}
+ 
+.home-welcome-authenticated::-webkit-scrollbar-track {
+    background: #f2f2f2
+}
+ 
+.home-welcome-authenticated::-webkit-scrollbar-thumb {
+  background-color: #e7e7e7;
+  border-radius: 5px;
+  /* cursor: pointer; */
+}
