--- a/style.css
+++ b/style.css
@@ -117,3 +117,12 @@ button:hover {
 .input-container input:focus ~ .one {
   width: 100%;
 }
+
+.profile-iframe-container {
+  position:  absolute;
+  top: 75px;
+  left: 100px;
+  right: 100px;
+  bottom: 0;
+  background: #FFFFFF;
+}
