--- a/feed.css
+++ b/feed.css
@@ -197,3 +197,16 @@
     width: 100%;
     height: 2px;
 }
+
+.close-profile {
+    position:  absolute;
+    right: 70px;
+    width: 25px;
+    height: 25px;
+    justify-content: center;
+}
+
+iframe {
+    width: 100%;
+    border: none;
+}
