--- a/profile.css
+++ b/profile.css
@@ -3,6 +3,7 @@
     display:  flex;
     align-items: flex-end;
     padding: 10px;
+    margin-bottom: 10px;
 }
 
 .profile-img {
@@ -26,8 +27,20 @@
     color: #666;
 }
 
+.profile-edit {
+    position:  absolute;
+    right: 0;
+}
+.profile-posts-header {
+    font-size: 1.1em;
+    color: #666;
+    border-bottom: 1px solid #f2f2f2;
+    padding: 2px 10px;
+}
+
+
 .profile-posts {
-    padding: 10px;
+    padding: 0 10px 10px 10px;
 }
 
 .profile-post {
