--- a/profile.css
+++ b/profile.css
@@ -13,7 +13,6 @@
     display:  flex;
     justify-content:  center;
     align-items: center;
-    /* padding: 10px; */
     border: 5px solid #e7e7e7;
     margin: 0 10px;
 }
@@ -31,6 +30,11 @@
     position:  absolute;
     right: 0;
 }
+
+.profile-about {
+    padding: 10px 20px 20px 20px;
+}
+
 .profile-posts-header {
     font-size: 1.1em;
     color: #666;
