--- a/profile.css
+++ b/profile.css
@@ -33,6 +33,26 @@
 
 .profile-about {
     padding: 10px 20px 20px 20px;
+    position:  relative;
+    display:  flex;
+    align-items: center;
+}
+
+.saveAboutText {
+    position:  absolute;
+    right: 0;
+}
+
+.profile-about textarea {
+    width: calc(100% - 50px);
+    resize:  none;
+    outline: none;
+    margin-bottom: 1px;
+}
+
+.profile-about textarea:focus {
+    border-bottom: 2px solid #336699;
+    margin-bottom: 0px;
 }
 
 .profile-posts-header {
