--- a/profile.css
+++ b/profile.css
@@ -48,11 +48,23 @@
     resize:  none;
     outline: none;
     margin-bottom: 1px;
+    padding: 10px;
+    font-size: 0.8em;
+    border: 1px solid #e7e7e7;
 }
 
-.profile-about textarea:focus {
-    border-bottom: 2px solid #336699;
-    margin-bottom: 0px;
+.textarea-highlight {
+    position:  absolute;
+    left: 20px;
+    bottom: 20px;
+    width: calc(100% - 100%);
+    height: 2px;
+    background: #336699;
+    transition: 250ms;
+}
+
+.profile-about textarea:focus ~ .textarea-highlight {
+    width: calc(100% - 90px);
 }
 
 .profile-posts-header {
