--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 * {
   box-sizing:  border-box;
 }
+
+/* html {
+  background: rgba(0,0,0,0.025);  
+} */
+
 body {
   /* width: 100vw; height: 100vh; */
   margin: 0;
