--- a/feed.css
+++ b/feed.css
@@ -162,7 +162,7 @@
 .feed-post-img {
     width: 40px;
     height: 40px;
-    margin: 10px 20px;
+    margin: 0 10px;
     overflow:  hidden;
     border-radius: 100%;
     border: 2px solid #e7e7e7;
@@ -193,7 +193,7 @@
 }
 
 .feed-post .text {
-    padding: 20px;
+    padding: 0 20px 10px 60px;
 }
 
 .feed-border {
